--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/luxon": "^3.4.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
+  },
+  "dependencies": {
+    "luxon": "^3.5.0"
   }
 }
